--- a/trunk/src/common/package.html
+++ b/trunk/src/common/package.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-Paquete que incluye todas las clases que conforman el núcleo principal de la aplicación.
+Paquete que incluye todas las clases que conforman el n&#250;cleo principal de la aplicaci&#243;n.
 </body>
 </html>
