--- a/trunk/src/onemax/package.html
+++ b/trunk/src/onemax/package.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-Paquete que incluye todas las clases que conforman el núcleo principal de la aplicación.
+Paquete que implementa las clases <i>Mapper</i> y <i>Reducer</i> necesarias para resolver el problema de maximizaci&#243;n de unos en un string aleatorio binario (<i>OneMAX</i>).
 </body>
 </html>
