--- a/trunk/src/ppeaks/package.html
+++ b/trunk/src/ppeaks/package.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-Paquete que incluye todas las clases que conforman el núcleo principal de la aplicación.
+Paquete que implementa las clases <i>Mapper</i> y <i>Reducer</i> necesarias para resolver el generador de problemas multimodal (<i>PPeaks</i>).
 </body>
 </html>
