--- a/trunk/src/targetphrase/package.html
+++ b/trunk/src/targetphrase/package.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-Paquete que incluye todas las clases que conforman el núcleo principal de la aplicación.
+Paquete que implementa las clases <i>Mapper</i> y <i>Reducer</i> necesarias para resolver el problema de la frase objetivo (<i>TargetPhrase</i>).
 </body>
 </html>
